hphp/test/slow/reified_generics/persistent-cls-2.php.expectf
Fatal error: Class C requires 1 generics but 0 given in %s on line 9
